--- a/01 let.html
+++ b/01 let.html
@@ -18,13 +18,13 @@
 
         //1、let 变量无法重复声明
         //2、let声明的为块级作用域
-        // {
-        //     let girl = 'shiry';
-        // }
-        // console.log(girl) //girl is not defined
+        {
+            let girl = 'shiry';
+        }
+        console.log(girl) //girl is not defined
         //3、 不存在变量提升
-        // console.log(song)
-        // var song = '两只老虎'
+        console.log(song)
+        var song = '两只老虎'
         //4、 不影响作用域链
         {
             let name = '小明'
