--- a/02 const.html
+++ b/02 const.html
@@ -11,7 +11,7 @@
 <body>
     <script>
         //声明常量
-        const NAME = '6+1';
+        const NAME = 'sam';
         console.log(NAME);
         //1、一定要赋值
 
